changed .gitignore to ignore the correct solution and project files

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,8 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+/monica-eva2/monica-eva2.vcxproj.filters
+/monica-eva2/monica-eva2.vcxproj
+/monica.sln
+/monica-hermes/monica-hermes.vcxproj.filters
+/monica-hermes/monica-hermes.vcxproj
