--- a/monica-hermes/monica-hermes-template.vcxproj
+++ b/monica-hermes/monica-hermes-template.vcxproj
@@ -39,10 +39,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\michael\development\C++\libs\boost_1_53_0;..\..;..\..\loki-lib\include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Users\michael\development\C++\libs\boost_1_53_0;..\..;..\..\loki-lib\include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
+    <IncludePath>..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -72,15 +72,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\util\abstract-db-connections.h" />
-    <ClInclude Include="..\..\util\algorithms.h" />
-    <ClInclude Include="..\..\util\climate-common.h" />
-    <ClInclude Include="..\..\util\datastructures.h" />
-    <ClInclude Include="..\..\util\date.h" />
-    <ClInclude Include="..\..\util\db.h" />
-    <ClInclude Include="..\..\util\helper.h" />
-    <ClInclude Include="..\..\util\read-ini.h" />
-    <ClInclude Include="..\..\util\sqlite3.h" />
+    <ClInclude Include="..\..\util\climate\climate-common.h" />
+    <ClInclude Include="..\..\util\db\abstract-db-connections.h" />
+    <ClInclude Include="..\..\util\db\db.h" />
+    <ClInclude Include="..\..\util\db\sqlite3.h" />
+    <ClInclude Include="..\..\util\tools\algorithms.h" />
+    <ClInclude Include="..\..\util\tools\datastructures.h" />
+    <ClInclude Include="..\..\util\tools\date.h" />
+    <ClInclude Include="..\..\util\tools\helper.h" />
+    <ClInclude Include="..\..\util\tools\read-ini.h" />
     <ClInclude Include="..\src\crop.h" />
     <ClInclude Include="..\src\debug.h" />
     <ClInclude Include="..\src\monica-eom.h" />
@@ -95,13 +95,13 @@
     <ClInclude Include="..\src\typedefs.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\util\abstract-db-connections.cpp" />
-    <ClCompile Include="..\..\util\algorithms.cpp" />
-    <ClCompile Include="..\..\util\climate-common.cpp" />
-    <ClCompile Include="..\..\util\date.cpp" />
-    <ClCompile Include="..\..\util\db.cpp" />
-    <ClCompile Include="..\..\util\read-ini.cpp" />
-    <ClCompile Include="..\..\util\sqlite3.c" />
+    <ClCompile Include="..\..\util\climate\climate-common.cpp" />
+    <ClCompile Include="..\..\util\db\abstract-db-connections.cpp" />
+    <ClCompile Include="..\..\util\db\db.cpp" />
+    <ClCompile Include="..\..\util\db\sqlite3.c" />
+    <ClCompile Include="..\..\util\tools\algorithms.cpp" />
+    <ClCompile Include="..\..\util\tools\date.cpp" />
+    <ClCompile Include="..\..\util\tools\read-ini.cpp" />
     <ClCompile Include="..\src\crop.cpp" />
     <ClCompile Include="..\src\debug.cpp" />
     <ClCompile Include="..\src\monica-eom.cpp" />
@@ -114,6 +114,9 @@
     <ClCompile Include="..\src\soilorganic.cpp" />
     <ClCompile Include="..\src\soiltemperature.cpp" />
     <ClCompile Include="..\src\soiltransport.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="..\monica.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
