updated monica.pro file
- updated the monica.pro -> but is now as template called
monica-template.pro which is supposed to be copied and renamed to
monica.pro for use basically with Linux but has only been tested now
with Windows and also only RUN_HERMES without the MySQL lib
-> right now the old sys-libs stuff is missing or commented out because
under windows Visual Studio 2012 (Express for Desktop) should be used
and there is no precompiled lib for MySQL with Microsofts C++ 11.0
compiler
-> for Linux this shouldn't matter and only the monica-template.pro
should be adjusted so the qmake buildsystem works under Linux
-> for any use with grids and/or MySQL under windows more has to be
done, e.g. compiling hdf5 and proj_4 and/or MySQL again
-> one solution for MySQL could be to use as drop in replacement MariaDB
which is a 100% compatible fork of MySQL and might offer VS2012 binaries

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,7 @@ pip-log.txt
 /monica-hermes/monica-hermes.vcxproj
 /monica-eva2/monica-eva2.vcxproj.filters
 /monica-eva2/monica-eva2.vcxproj
+/Makefile.Release
+/Makefile
+/Makefile.Debug
+/monica.pro
