updates and refactorings to monica structure
- template solution files for single projects (if more are needed they
can easily be added to monica.sln)
- updated project templates which should hopefully run out of the box if
pathes and libraries are installed in good default places (means repo in
GitHub dir, boost, loki-lib and maria-db besides GitHub)
- put some soil conversion code into own conversion.h/.cpp file, to be
extended ...
- refactored monica-main.cpp for hermes and eva2 (for now) to have one
main.cpp per actual project, so the project is supposed to include just
the code (files) really necessary, instead of #ifdef ing a lot -> this
is not completly done yet, for the other projects (landcare-dss, gis,
cc-germany) and also should be done to simulation.h/.cpp, but later
- typedefs.h has now monica- prefix to have a uniform meanig for all the
other possible models in the existing landcare-dss and to be able to
reference a typedef file without having to resort to full path names in
order to disambiguate, which previously might have forced to use a
little bit ugly include path definitions for the compiler in order to be
able to use the pathes to the same named typedefs.h

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,7 @@ installer/Hohenfinow2/monica_parameters.txt
 installer/Hohenfinow2/*.dat
 
 /db-connections.ini
+/monica-mpmas/BRA010
+/monica-mpmas/BRA009BSL_.err
+/monica-mpmas/BRA010BSL_.err
+/monica-mpmas/BRA009
