changed EVA2 to EVA and old libmysql instead of mariadb
- changed the compiler vars EVA2 to EVA
- changed the files eva2_methods.h/cpp to just eva_methods.h/cpp
- updated the names also in the project and solution files
- added the vcxproj.users as template to eva project, because it seams
additional environment variables like the needed PATH changes in order
find the libmysql.dll during debugging in the IDE will put into a
project file ending in .user
- the only thing still somewhat suboptimal regarding easy out of the box
use for development purposes is name of the directory containing version
6.0.2 of the MySQL connector/c, when installed besides GitHub dir from
the zip file (not msi), so depending on the installation this path/name
might have to change in the linker and compiler settings for the eva
project

--- a/monica-eva/monica-eva-template.vcxproj
+++ b/monica-eva/monica-eva-template.vcxproj
@@ -23,7 +23,7 @@
     <ClInclude Include="..\src\conversion.h" />
     <ClInclude Include="..\src\crop.h" />
     <ClInclude Include="..\src\debug.h" />
-    <ClInclude Include="..\src\eva2_methods.h" />
+    <ClInclude Include="..\src\eva_methods.h" />
     <ClInclude Include="..\src\monica-parameters.h" />
     <ClInclude Include="..\src\monica-typedefs.h" />
     <ClInclude Include="..\src\monica.h" />
@@ -45,7 +45,7 @@
     <ClCompile Include="..\src\conversion.cpp" />
     <ClCompile Include="..\src\crop.cpp" />
     <ClCompile Include="..\src\debug.cpp" />
-    <ClCompile Include="..\src\eva2_methods.cpp" />
+    <ClCompile Include="..\src\eva_methods.cpp" />
     <ClCompile Include="..\src\monica-eva-main.cpp" />
     <ClCompile Include="..\src\monica-parameters.cpp" />
     <ClCompile Include="..\src\monica.cpp" />
@@ -59,6 +59,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{73C97EAD-0BEC-41AF-88A4-2C830A9F7DF1}</ProjectGuid>
     <RootNamespace>monicaeva2</RootNamespace>
+    <ProjectName>monica-eva</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -94,15 +95,15 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <PreprocessorDefinitions>RUN_EVA2;WINSOCK2;WIN32;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>RUN_EVA;WINSOCK2;WIN32;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
-      <AdditionalIncludeDirectories>..\..\..\mariadb_client-1.0.0-win32\mariadbclient\include;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32\include;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>libmariadb.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\mariadb_client-1.0.0-win32\lib;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libmysql.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -111,16 +112,16 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>RUN_EVA2;WINSOCK2;WIN32;MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\..\mariadb_client-1.0.0-win32\mariadbclient\include;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>RUN_EVA;WINSOCK2;WIN32;MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>libmariadb.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\mariadb_client-1.0.0-win32\lib;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libmysql.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
