updates to make monica-swig work again
- renames and moves of monica-swig solution file and project files
- update in the project for the pre-processing for swig to include a
parameter -DRUN_EVA
- updated files to match changes from last commits

--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,8 @@ installer/Hohenfinow2/*.dat
 /monica-mpmas/BRA009BSL_.err
 /monica-mpmas/BRA010BSL_.err
 /monica-mpmas/BRA009
+/monica-eva/monica-eva.vcxproj
+/monica-eva/monica-eva.vcxproj.filters
+/monica-swig/monica-swig.lastbuildstate
+/monica-swig/monica-swig.vcxproj
+/monica-swig/monica-swig.vcxproj.filters
