--- a/monica-swig/monica-swig-template.vcxproj
+++ b/monica-swig/monica-swig-template.vcxproj
@@ -20,9 +20,10 @@
     <ClInclude Include="..\..\util\tools\date.h" />
     <ClInclude Include="..\..\util\tools\helper.h" />
     <ClInclude Include="..\..\util\tools\read-ini.h" />
+    <ClInclude Include="..\src\conversion.h" />
     <ClInclude Include="..\src\crop.h" />
     <ClInclude Include="..\src\debug.h" />
-    <ClInclude Include="..\src\eva2_methods.h" />
+    <ClInclude Include="..\src\eva_methods.h" />
     <ClInclude Include="..\src\monica-parameters.h" />
     <ClInclude Include="..\src\monica.h" />
     <ClInclude Include="..\src\simulation.h" />
@@ -38,14 +39,13 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">echo In order to function correctly, please ensure the following environment variables are correctly set: 
 echo PYTHON_INCLUDE: %PYTHON_INCLUDE% 
 echo PYTHON_LIB: %PYTHON_LIB% 
-echo on 
-    ..\..\..\swigwin-2.10.0\swig.exe -c++ -python "%(FullPath)" </Command>
+echo on ..\..\swigwin-2.10.0\swig.exe -c++ -python "%(FullPath)" </Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(InputName)_wrap.cxx;%(Outputs)</Outputs>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">echo In order to function correctly, please ensure the following environment variables are correctly set: 
 echo PYTHON_INCLUDE: %PYTHON_INCLUDE% 
 echo PYTHON_LIB: %PYTHON_LIB% 
 echo on 
-..\..\..\swigwin-2.0.10\swig.exe -c++ -python "%(FullPath)" </Command>
+..\..\..\swigwin-2.0.10\swig.exe -DRUN_EVA -c++ -python "%(FullPath)" </Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(InputName)_wrap.cxx;%(Outputs)</Outputs>
     </CustomBuild>
   </ItemGroup>
@@ -57,10 +57,11 @@ echo on
     <ClCompile Include="..\..\util\tools\algorithms.cpp" />
     <ClCompile Include="..\..\util\tools\date.cpp" />
     <ClCompile Include="..\..\util\tools\read-ini.cpp" />
+    <ClCompile Include="..\src\conversion.cpp" />
     <ClCompile Include="..\src\crop.cpp" />
     <ClCompile Include="..\src\debug.cpp" />
-    <ClCompile Include="..\src\eva2_methods.cpp" />
-    <ClCompile Include="..\src\monica-main.cpp" />
+    <ClCompile Include="..\src\eva_methods.cpp" />
+    <ClCompile Include="..\src\monica-eva-main.cpp" />
     <ClCompile Include="..\src\monica-parameters.cpp" />
     <ClCompile Include="..\src\monica.cpp" />
     <ClCompile Include="..\src\simulation.cpp" />
@@ -78,7 +79,7 @@ echo on
     <SccProjectName />
     <SccLocalPath />
     <ProjectGuid>{8482B9F0-AB4B-4FF5-AC7E-18BDCD42EC97}</ProjectGuid>
-    <ProjectName>monica</ProjectName>
+    <ProjectName>monica-swig</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -109,15 +110,11 @@ echo on
     <OutDir>.\Debug\</OutDir>
     <IntDir>.\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\..\..\mariadb_client-1.0.0-win32\mariadbclient\include;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>$(VCInstallDir)lib;$(VCInstallDir)atlmfc\lib;$(WindowsSDK_LibraryPath_x86);</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>.</OutDir>
     <IntDir>.</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\..\..\mariadb_client-1.0.0-win32\mariadbclient\include;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;$(VCInstallDir)include;$(VCInstallDir)atlmfc\include;$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>$(VCInstallDir)lib;$(VCInstallDir)atlmfc\lib;$(WindowsSDK_LibraryPath_x86);</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -129,8 +126,8 @@ echo on
       <WarningLevel>Level3</WarningLevel>
       <MinimalRebuild>true</MinimalRebuild>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\Program Files\MySQL\MySQL Connector C 6.0.2\include;$(PYTHON_INCLUDE);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WINSOCK2;RUN_EVA2;WIN32;_DEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32\include;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;$(PYTHON_INCLUDE);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WINSOCK2;RUN_EVA;WIN32;_DEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Debug\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Debug\monica.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Debug\</ObjectFileName>
@@ -160,7 +157,7 @@ echo on
       <OutputFile>_monica.pyd</OutputFile>
       <ImportLibrary>.\Debug\_monica.lib</ImportLibrary>
       <AdditionalDependencies>libmysql.lib;$(PYTHON_LIB);%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files\MySQL\MySQL Connector C 6.0.2\lib\opt;..\..\..\mariadb_client-1.0.0-win32\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -172,8 +169,8 @@ echo on
       <Optimization>MaxSpeed</Optimization>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>Level3</WarningLevel>
-      <AdditionalIncludeDirectories>C:\Program Files\MySQL\MySQL Connector C 6.0.2\include;$(PYTHON_INCLUDE);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WINSOCK2;RUN_EVA2;WIN32;NDEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32\include;..\..\..\boost_1_53_0;..\..\util;..\..\loki-lib\include;$(PYTHON_INCLUDE);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WINSOCK2;RUN_EVA;WIN32;NDEBUG;_WINDOWS;_USRDLL;EXAMPLE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AssemblerListingLocation>.\Release\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Release\monica.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
@@ -201,7 +198,7 @@ echo on
       <OutputFile>_monica.pyd</OutputFile>
       <ImportLibrary>.\Release\_monica.lib</ImportLibrary>
       <AdditionalDependencies>libmysql.lib;$(PYTHON_LIB);%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Program Files\MySQL\MySQL Connector C 6.0.2\lib\opt;..\..\..\mariadb_client-1.0.0-win32\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\..\mysql-connector-c-noinstall-6.0.2-win32\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
