--- a/monica-swig/monica-swig-template.vcxproj.filters
+++ b/monica-swig/monica-swig-template.vcxproj.filters
@@ -23,12 +23,6 @@
     <ClCompile Include="..\src\debug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\eva2_methods.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\monica-main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\monica-parameters.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -59,6 +53,15 @@
     <ClCompile Include="..\..\util\db\sqlite3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\eva_methods.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\conversion.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\monica-eva-main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\util\db\abstract-db-connections.h">
@@ -83,9 +86,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\debug.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\eva2_methods.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\util\tools\helper.h">
@@ -122,6 +122,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\typedefs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\eva_methods.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\conversion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
