dev dump into temporary branch

--- a/.gitignore
+++ b/.gitignore
@@ -192,7 +192,8 @@ installer/Hohenfinow2/monica_parameters.txt
 installer/Hohenfinow2/*.dat
 
 /db-connections.ini
-/monica-mpmas/BRA010
-/monica-mpmas/BRA009BSL_.err
-/monica-mpmas/BRA010BSL_.err
-/monica-mpmas/BRA009
+/monica-mpmas/BRA*
+/monica-eva/monica-eva.vcxproj.filters
+/monica-eva/monica-eva.vcxproj
+/monica-mpmas/ReadCropActIds.txt
+/monica-mpmas/ReadCropYields.txt
