october 2013 brazil conference commit
- the working state for october 2013
- before the merge of carbiocial branch back to master branch

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ installer/Hohenfinow2/*.dat
 /monica-eva/monica-eva.vcxproj
 /monica-mpmas/ReadCropActIds.txt
 /monica-mpmas/ReadCropYields.txt
+/monica-mpmas/DEF237
